--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,13 @@ header {
     align-items: center;
 }
 
-.logo img {
-    width: 50px;
+.initials {
+    padding: 3px;
+    margin: auto;
+    font-size: large;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    text-decoration: none;
 }
 
 nav {
@@ -39,17 +44,29 @@ nav {
 }
 
 .nav-links li {
-    margin: 0 15px;
+    margin: 0 10px;
 }
 
 .nav-links a {
     color: #ffffff;
     text-decoration: none;
     font-weight: 500;
+    padding: 5px 10px;
+    border-radius: 5px;    
+    transition-duration: 200ms;
 }
 
 .nav-links a:hover {
-    color: #4caf50;
+    background-color: #ffffff;
+    color: #121212;
+    transition-duration: 200ms;
+}
+
+.nav_links .highlighted {      
+    padding: 5px 10px;
+    border-radius: 5px;  
+    background-color: #ffffff;
+    color: #121212;
 }
 
 .hamburger {
@@ -126,6 +143,78 @@ nav {
 
 .hero-content p {
     font-size: 1.5em;
+}
+
+/* Contact form styles */
+#contact {
+    width: 90%;
+    max-width: 800px;
+    margin: 50px auto;
+    text-align: center;
+}
+
+#contact h2 {
+    font-size: 2.5em;
+    margin-bottom: 20px;
+}
+
+#contact-form {
+    background: rgba(255, 255, 255, 0.2);
+    padding: 20px;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.form-group {
+    margin-bottom: 20px;
+    text-align: left;
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.form-group input,
+.form-group textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #cccccc;
+    border-radius: 5px;
+    background: rgba(255, 255, 255, 0.2);
+    color: #ffffff;
+    box-sizing: border-box;
+}
+
+textarea{
+    resize: none;
+    height: 100px;
+}
+
+.form-group input::placeholder,
+.form-group textarea::placeholder {
+    color: #dddddd;
+}
+
+.form-group input:focus,
+.form-group textarea:focus {
+    outline: none;
+    border-color: #4caf50;
+}
+
+button[type="submit"] {
+    background-color: #4caf50;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+button[type="submit"]:hover {
+    background-color: #45a049;
 }
 
 /* Footer styles */
